--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,6 @@
 {
-  "name": "mobile",
-  "app_id": "",
+  "name": "mobileApp",
+  "app_id": "1e7c3e24",
   "type": "ionic-angular",
   "integrations": {
     "cordova": {}
